<resources>
    <string name="app_name">Drugstore</string>

    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="sort">Sort</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="loading">Loading</string>

    <string name="loading1">Loading form internet</string>
    <string name="loading2">Loading form memory</string>
    <string name="loading_failed">Loading failed</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="title">Title</string>
    <string name="active_substance">Active substance</string>
    <string name="country">Country</string>

    <string name="id">ID</string>
    <string name="composition">Composition</string>

    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <string name="add_drug">Add drug</string>
    <string name="remove_drug">Remove drug</string>

    <string name="all">All</string>

    <string name="belarus">Belarus</string>
    <string name="turkey">Turkey</string>
    <string name="usa">USA</string>

    <string name="title_sample">Paracetamol</string>
    <string name="country_sample">Belarus</string>

    <string name="incorrect_value">Incorrect value</string>

    <string-array name="query_suggestions">
        <item>Ибупрофен</item>
        <item>Абакавир</item>
        <item>Панадол</item>
    </string-array>
</resources>
