<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_action_add_inverted"
            android:orderInCategory="100"
            android:title="@string/add"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_action_search"
            android:orderInCategory="100"
            android:title="@string/search"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_all_list"
            android:title="@string/all"/>

    <item
            android:id="@+id/action_belarus_list"
            android:title="@string/belarus"/>

    <item
            android:id="@+id/action_turkey_list"
            android:title="@string/turkey"/>

    <item
            android:id="@+id/action_usa_list"
            android:title="@string/usa"/>

</menu>